--- a/Ex.016/style.css
+++ b/Ex.016/style.css
@@ -9,10 +9,17 @@ body {
 }
 main {
     background-color: white;
+    border-radius: 10%;
+    box-shadow: 5px 5px 5px rgba(65, 65, 65, 0.486);
     width: 600px;
-    padding: 20px;
+    padding: 40px;
     margin: auto;
 }
 p {
     text-align: justify;
+}
+h1 {
+    color: blueviolet;
+    text-align: center;
+    text-shadow: 1px 1px 2px gray;
 }
