--- a/Ex.021 extra/styles/style.css
+++ b/Ex.021 extra/styles/style.css
@@ -26,26 +26,59 @@ Gray X 11 Gray: #bfc0c0
     padding: 2px;
 }
 
+p {
+    margin: 15px 20px;
+    text-align: center;
+}
+
 body {
-    background-image: linear-gradient(#00120b,black);
+    background-image: linear-gradient(to bottom,#00160e,black);
     background-color: var(--blackback);  /*For browsers that do not support gradients */
     font-family: var(--fonte-destaque);
 }
 
 header {
     background-color: black;
-    padding: 20px;
+    padding: 25px 50px 25px 50px;
+    margin: auto;
+    min-height: 150px;
+    box-shadow: 0px 7px 8px #000000bd;
 }
 
 header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
+    text-align: left;
+    font-size: 40px;
+    font-weight: 10;
+    font-weight: lighter;
+}
+
+header > h1:hover {
+    color: var(--grayedited);
 }
 
 nav {
     color: var(--grayedited);
     text-decoration: none;
     font-family: var(--fonte-destaque);
+    text-align: right;
+    margin: auto;
+    min-width: 900px;
+}
+
+nav > a {
+    color: var(--grayedited);
+    text-decoration: none;
+    font-family: var(--fonte-destaque);
+    font-size: 22px;
+}
+
+nav > a:hover {
+    color: rgb(75, 75, 75);
+    text-decoration: none;
+    font-family: var(--fonte-destaque);
+    transition-duration: 0.2s;
 }
 
 nav:active {
@@ -56,27 +89,139 @@ nav:active {
 
 main {
     min-width: 300px;
-    max-width: 1000px;
+    max-width: 1300px;
     padding: 30px;
     margin: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.700);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 main img {
     width: 100%;
 }
 
+main img.peq {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+main > ul > li > a {
+    color: var(--grayedited);
+    text-decoration: none;
+    font-family: var(--fonte-destaque);
+    font-size: 22px;
+    list-style: none;
+}
+
+main > ul > li > a:hover {
+    color: rgb(75, 75, 75);
+    text-decoration: none;
+    font-family: var(--fonte-destaque);
+    transition-duration: 0.2s;
+    list-style: none;
+}
+
+main > ul > li > a:active {
+    color: var(--grayedited);
+    text-decoration: none;
+    font-family: var(--fonte-destaque);
+    list-style: none;
+}
+
+.divprincipal {
+    margin: 40px 30px;
+    columns: 2;
+}
+
+aside {
+    background-color: #764248;
+    border-radius: 70px;
+    padding: 40px;
+    margin: auto;
+    box-shadow: 0px 0px 10px #764248;
+}
+
+aside > h1 {
+    color: white;
+    font-size: 38px;
+    font-family: var(--fonte-padrao);
+    padding-left: 15px;
+}
+
+aside > h2 {
+    color: rgb(180, 180, 180);
+    font-size: 24px;
+    font-family: var(--fonte-padrao);
+    font-weight: 100;
+    padding-left: 6px;
+    font-style: italic;
+}
+
+aside > p {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: whitesmoke;
+    text-align: left;
+}
+
+div.video {
+    background-color: #44262a;
+    margin: 30px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 50%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+}
+
+footer > p > a {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #815E5B;
+    text-decoration: underline;
+}
+
+footer > p > a:active {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #815E5B;
+    text-decoration: underline;
+}
+
+footer > p > a:visited {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #815E5B;
+    text-decoration: underline;
+}
+
+footer > p > a:hover {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #5f4543;
+    text-decoration: underline;
+}
+
 h2 {
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 15px;
 }
 
 h3 {
     color: var(--grayedited);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 15px;
+    text-indent: 30px;
 }
 
 .greenlight {
     color: #34F765;
+    padding: 0px;
+    margin: auto;
     text-decoration: none;
 }
 
@@ -89,4 +234,6 @@ footer {
     background-color: #1A1B1F;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #815E5B;
+    padding: 5px;
+    margin-top: 30px;
 }
